<resources>
    <string name="app_name">WordWhiz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="input_class_code">Input Class Code</string>
    <string name="enter_class_code">Enter Class Code</string>
    <string name="note">Note: Please ask teacher for your class code.</string>
    <string name="next">Next</string>
    <string name="grade_level">What Grade Level Are You?</string>
    <string name="choose_option">Choose option</string>
    <string name="pre_test">Pre Test Time!</string>
    <string name="let_s_start">Let\'s Start!</string>
</resources>