<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/enter_class_code"
            app:srcCompat="@drawable/code"
            android:padding="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_class_code"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextClassCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingBottom="20dp"/>

        <Button
            android:id="@+id/button"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="#000"
            android:fontFamily="@font/pixel"/>
    </LinearLayout>
</LinearLayout>